# live-profile-server

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  live-profile-server.sublime-project  stack.yaml
live-profile-server-api/: CHANGELOG.md  README.md  live-profile-server-api.cabal
live-profile-server-api/src/Profile/Live/Server/: API.hs  Events.hs
live-profile-server-api/src/Profile/Live/Server/API/: Bined.hs  Connection.hs  EventLog.hs  Session.hs  Upload.hs
live-profile-server-api/src/Profile/Live/Server/Utils/: DeriveJson.hs  Schema.hs
live-profile-server-backend/: .gitignore  README.md  live-profile-server-backend.cabal  stack.yaml
live-profile-server-backend/app/: Main.hs
live-profile-server-backend/config/: config.test.yaml  config.yaml
live-profile-server-backend/src/Data/: Filterable.hs
live-profile-server-backend/src/Profile/Live/Server/: API.hs  Application.hs  Config.hs  Error.hs  Models.hs  Monad.hs  Utils.hs
live-profile-server-backend/src/Profile/Live/Server/Application/: Bined.hs  Connection.hs  EventLog.hs  Session.hs  Upload.hs
live-profile-server-backend/src/Profile/Live/Server/Application/Bined/: Model.hs
live-profile-server-backend/src/Profile/Live/Server/Application/EventLog/: Query.hs
live-profile-server-backend/src/Profile/Live/Server/Application/Upload/: Model.hs
live-profile-server-backend/src/Profile/Live/Server/Config/: Auth.hs  Database.hs
live-profile-server-backend/src/Profile/Live/Server/Events/: Model.hs
live-profile-server-backend/static/: index.html
live-profile-server-backend/static/swagger-ui/: index.html
live-profile-server-backend/test/Profile/Live/Server/Application/Upload/: ModelSpec.hs
live-profile-server-frontend/: README.md  compile.sh  compile_pedantic.sh  live-profile-server-frontend.cabal  stack.yaml
live-profile-server-frontend/app/: Main.hs
live-profile-server-frontend/src/Profile/Live/Server/: Client.hs
live-profile-server-frontend/src/Profile/Live/Server/Client/: Async.hs  Auth.hs  Bined.hs  Connection.hs  EventLog.hs  Pagination.hs  Router.hs  Session.hs  Upload.hs  Utils.hs
live-profile-server-frontend/src/Profile/Live/Server/Client/Auth/: Widget.hs
live-profile-server-frontend/src/Profile/Live/Server/Client/Bootstrap/: Button.hs  Form.hs  Modal.hs  Panel.hs  Progress.hs
live-profile-server-frontend/src/Profile/Live/Server/Client/Upload/: Input.hs
live-profile-test-app/: live-profile-test-app.cabal  stack.yaml  start.sh
live-profile-test-app/src/: Main.hs
servant-rest-derive/: LICENSE  README.md  servant-rest-derive.cabal  stack.yaml
servant-rest-derive-server/: CHANGELOG.md  README.md  servant-rest-derive-server.cabal  test.persist
servant-rest-derive-server/src/Servant/API/REST/Derive/: Server.hs
servant-rest-derive-server/src/Servant/API/REST/Derive/Server/: Vinyl.hs
servant-rest-derive/src/Servant/API/REST/: Derive.hs
servant-rest-derive/src/Servant/API/REST/Derive/: Named.hs  Patch.hs  TH.hs  Vinyl.hs
