name:                live-profile-server-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/NCrashed/live-profile-server#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           (c) 2016 Anton Gushcha
category:            Web
build-type:          Simple
extra-source-files:
  README.md 
  CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Profile.Live.Server.API
  build-depends:       
      base                    >= 4.7      && < 5
    , aeson                   >= 0.11     && < 0.12
    , bytestring              >= 0.10     && < 0.11
    , lens                    >= 4.13     && < 4.14
    , servant                 >= 0.7      && < 0.8
    , servant-auth-token-api  >= 0.1      && < 0.2
    , servant-js              >= 0.7      && < 0.8
    , servant-swagger         >= 1.0      && < 1.1
    , swagger2                >= 2.0      && < 2.1
    
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

source-repository head
  type:     git
  location: https://github.com/NCrashed/live-profile-server
