name:                live-profile-server-api
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/NCrashed/live-profile-server#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           (c) 2016 Anton Gushcha
category:            Web
build-type:          Simple
extra-source-files:
  README.md 
  CHANGELOG.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
    Profile.Live.Server.API
    Profile.Live.Server.API.Connection
    Profile.Live.Server.API.EventLog
    Profile.Live.Server.API.Session
    Profile.Live.Server.Events
  build-depends:       
      base                    >= 4.7      && < 5
    , aeson                   >= 0.11     && < 1.1
    , aeson-injector          >= 1.0.4    && < 1.1
    , bytestring              >= 0.10     && < 0.11
    , ghc-events              >= 0.5      && < 0.6
    , lens                    >= 4.13     && < 4.15
    , servant                 >= 0.7      && < 0.8
    , servant-auth-token-api  >= 0.2      && < 0.3
    , servant-rest-derive     >= 0.1      && < 0.2
    , servant-swagger         >= 1.0      && < 1.2
    , swagger2                >= 2.0      && < 2.2
    , text                    >= 1.2      && < 1.3 
    , time                    >= 1.5      && < 1.7
    , vinyl                   >= 0.5.2    && < 0.6
    
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    UndecidableInstances

source-repository head
  type:     git
  location: https://github.com/NCrashed/live-profile-server
