name:                live-profile-server-backend
version:             0.1.0.0
synopsis:            Backend for live profile server
description:         Please see README.md
homepage:            https://github.com/ncrashed/live-profile-server#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Gushcha
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
  hs-source-dirs:      src
  exposed-modules:
    Profile.Live.Server.Application
    Profile.Live.Server.Config
    Profile.Live.Server.Config.Database
    Profile.Live.Server.Utils.DeriveJson
  default-language:    Haskell2010
  build-depends:       
      base >= 4.7 && < 5
    , aeson >= 0.11 && < 0.12
    , bytestring >= 0.10 && < 0.11
    , file-embed >= 0.0.10 && < 0.1
    , live-profile-server-api == 0.1.0.0
    , monad-logger >= 0.3 && < 0.4
    , persistent-postgresql >= 2.2 && < 2.6
    , text >= 1.2 && < 1.3
    , wai >= 3.2 && < 3.3
    , wai-extra >= 3.0 && < 3.1
    , yaml >= 0.8 && < 0.9

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  if flag(dev) || flag(library-only)
    cpp-options:   -DDEVELOPMENT
    ghc-options:   -Wall -fwarn-tabs -O0
  else
    ghc-options:   -Wall -fwarn-tabs -O2

executable live-profile-server
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:
      base >= 4.7 && < 5
    , live-profile-server-backend

test-suite live-profile-test
  type:              exitcode-stdio-1.0
  main-is:           Spec.hs
  -- other-modules:     
  hs-source-dirs:    test
  ghc-options:       -Wall
  default-language:  Haskell2010

  default-extensions:
    DataKinds
    DeriveGeneric
    FlexibleInstances
    GeneralizedNewtypeDeriving
    KindSignatures
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    TemplateHaskell
    TypeFamilies
    TypeOperators
    TypeSynonymInstances

  build-depends: 
      base
    , live-profile-server-backend
    , hspec >= 2.2
