name:                live-profile-server-frontend
version:             0.1.0.0
synopsis:            Frontend of live profiling server for Haskell apps
description:         Please see README.md
homepage:            https://github.com/ncrashed/live-profile-server#readme
license:             BSD3
license-file:        LICENSE
author:              NCrashed
maintainer:          ncrashed@gmail.com
copyright:           2016 Anton Gushcha
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md 
  CHANGELOG.md

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     
    Profile.Live.Server.Client
  build-depends:       
      base                  >= 4.7      && < 5
    , aeson                 >= 0.9      && < 0.12
    , containers            >= 0.5      && < 0.6
    , data-default          >= 0.5      && < 0.6
    , dependent-map         >= 0.2      && < 0.3
    , either                >= 4.4      && < 4.5
    , ghcjs-base            >= 0.2      && < 0.3
    , ghcjs-servant-client  >= 1.1.1    && < 1.2
    , lens                  >= 4.13     && < 4.14
    , reflex                >= 0.4      && < 0.5
    , reflex-dom            >= 0.3      && < 0.4
    , servant               >= 0.7      && < 0.8
    , servant-swagger       >= 1.0      && < 1.1
    , shine                 >= 0.1      && < 0.2
    , swagger2              >= 2.0      && < 2.1
    , text                  >= 1.2      && < 1.3
    , transformers          >= 0.4      && < 0.5
    
  default-language:    Haskell2010
  default-extensions:
    DataKinds
    DeriveGeneric
    EmptyDataDecls
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeFamilies
    TypeOperators

executable fitclubs-frontend-output
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -Wall
  build-depends:       base
                     , ghcjs-base
                     , live-profile-server-frontend
  default-language:    Haskell2010

source-repository head
  type:     git
  location: git@git.github.com:NCrashed/live-profile-server.git